deploy/k8s/global-router.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: global-router
  namespace: featuresignals
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: global-router
  template:
    metadata:
      labels:
        app: global-router
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      imagePullSecrets:
        - name: ghcr-pull
      containers:
        - name: global-router
          image: ghcr.io/dinesh-g1/featuresignals-global-router:132a77f038b769e99a42dfc66c6c8d4782288ee0
          volumeMounts:
            - name: config
              mountPath: /etc/router
            - name: certs
              mountPath: /data/certs
            - name: www
              mountPath: /data/www
          resources:
            limits:
              cpu: "500m"
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi
      volumes:
        - name: config
          configMap:
            name: router-config
        - name: certs
          hostPath:
            path: /data/certs
            type: DirectoryOrCreate
        - name: www
          hostPath:
            path: /data/www
            type: DirectoryOrCreate
---
apiVersion: v1
kind: Service
metadata:
  name: global-router
  namespace: featuresignals
spec:
  type: NodePort
  selector:
    app: global-router
  ports:
    - port: 443
      targetPort: 443
      name: https
    - port: 80
      targetPort: 80
      name: http
